h2. Change Log

Also see the "release notes of underlying morphia library":http://code.google.com/p/morphia/wiki/ReleaseNotes and the GORM-MongoDB "User Guide":http://jkuehn.github.com/gorm-mongodb/

h3. v0.7.5 - 2011-10-23
* MongoDB authentication configuration (thanks to Dave)
* "Convenient access to morphias query methods":http://jkuehn.github.com/gorm-mongodb/ref/Domain%20Classes/query.html
* Static get() method now also accepts com.mongodb.DBRef and com.google.code.morphia.Key instances

h3. v0.7.4 - 2011-10-13
* Grails 2.0 compatibility
* Added validation property to query parameters to optionally turn of validation (thanks to Alexander)
* Using MongoDB java driver *2.6*

h3. v0.7.3 - 2011-07-03
* updated morphia library to *1.00-SNAPSHOT* (r1740)
* Added sorting order parameter in MongoDB queries - better gorm compatibility
* *breaking change* static update method now updates all matched entities! There was a bug: instead of updating all matched entities, it updated only the first
* "GPGORMMONGODB-15":http://jira.grails.org/browse/GPGORMMONGODB-15 Added updateFirst operation

h3. v0.7.2 - 2011-03-27
* Fix in Key.fetch(): NullPointerException if Key didn't hold a class reference
* findAll now returns all found entities as documented, not only the first 25

h3. v0.7.1 - 2011-02-28
* Fix in ObjectFactory: inherited classes were not always resolved correctly

h3. v0.7 - 2011-02-27
* an "ObjectFactory":http://morphia.googlecode.com/svn/site/morphia/apidocs/com/google/code/morphia/ObjectFactory.html is used to create domain instances. Now all domain objects are autowired automatically, also those returned by find* and list methods.
* makeKey method is now deprecated, please use createKey instead
* new instance method: createDBRef
* countAll is now deprecated, please use count instead
* added fromDBObject and toDBObject methods
* added fetch() method to com.google.code.morphia.Key class

h3. v0.6.3 - 2011-02-25