@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Sat Oct 22 14:08:52 CEST 2011
-app.grails.version=2.0.0.RC1
+#Thu Dec 01 14:28:19 CET 2011
+app.grails.version=2.0.0.RC2
 app.name=mongodb-morphia
-app.version=0.7.5
-plugins.hibernate=2.0.0.RC1
+app.version=0.7.6
+plugins.hibernate=2.0.0.RC2
 plugins.release=1.0.0.RC3
-plugins.tomcat=2.0.0.RC1
+plugins.svn=1.0.0.M1
+plugins.tomcat=2.0.0.RC2
